# WoW-io-Design-Contest

./: README.md
.github/workflows/: ci.yml
Arduino/at_command/at_command_spi/: at_command_spi.ino
Arduino/loopback/client/loopback_client_spi/: loopback_client_spi.ino
Arduino/loopback/udp/loopback_udp_spi/: loopback_udp_spi.ino
Arduino/mqtt/mqtt_client_spi/: mqtt_client_spi.ino
Arduino/mqtt/mqtt_client_uart/: mqtt_client_uart.ino
Arduino/ssl/ssl_client_spi/: ssl_client_spi.ino
Arduino/ssl/ssl_client_uart/: ssl_client_uart.ino
C/: CMakeLists.txt  README.md  README_KO.md
C/at_command/: CMakeLists.txt  at_command_spi.c  at_command_uart.c
C/aws_mqtts/: CMakeLists.txt  aws_mqtts_spi.c  aws_mqtts_uart.c  certification.h
C/http/client/: CMakeLists.txt  http_client_spi.c  http_client_uart.c
C/http/server/: CMakeLists.txt  http_server_spi.c  http_server_uart.c  web_page.h
C/loopback/: CMakeLists.txt
C/loopback/client/: CMakeLists.txt  loopback_client_spi.c  loopback_client_uart.c
C/loopback/server/: CMakeLists.txt  loopback_server_spi.c  loopback_server_uart.c
C/loopback/udp/: CMakeLists.txt  loopback_udp_spi.c  loopback_udp_uart.c
C/mqtt/: CMakeLists.txt  mqtt_pub_sub_spi.c  mqtt_pub_sub_uart.c
C/ssl/: CMakeLists.txt  ssl_client_spi.c  ssl_client_uart.c
MicroPython/: README.md
MicroPython/examples/: 07_ssl_client.py  08_mqtt_client.py  09_mqtts_client.py
MicroPython/lib/: w55rp20_s2e_spi.py  w55rp20_s2e_uart.py
